# dgraph-rs

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: api.proto
src/: errors.rs  lib.rs
src/protos/: api.rs  api_grpc.rs  mod.rs
