[package]
name = "dgraph-rs"
version = "0.1.2"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

description = "Provides a client for the DGraph graph database"
license = "MIT OR Apache-2.0"
keywords = ["dgraph", "graph", "graphdb", "database"]


[dependencies]
grpc            = "~0.6"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"
httpbis = "0.7.0"
failure = "0.1.3"
serde = "1.0.82"
serde_json = "1.0.33"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

