[package]
name = "dgraph-rs"
version = "0.2.1"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

description = "Provides a client for the DGraph graph database"
license = "MIT OR Apache-2.0"
keywords = ["dgraph", "graph", "graphdb", "database"]


[dependencies]
grpc            = "~0.6"
protobuf        = "~2"
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }

httpbis = "0.7.0"
serde = "1.0.82"
serde_json = "1.0.33"
rand = "0.7.0"
rand_xoshiro = "0.4.0"

[dev-dependencies]
async-std = "0.99.4"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

