[package]
name = "dgraph-rs"
version = "0.2.8"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

description = "Provides a client for the DGraph graph database"
license = "MIT OR Apache-2.0"
keywords = ["dgraph", "graph", "graphdb", "database"]


[dependencies]
grpc            = "~0.6.1"
protobuf        = "~2.8.2"
futures = { version = "0.3", features = ["compat"] }

httpbis = "0.7.0"
serde = "1.0.*"
serde_json = "1.0.*"
rand = "0.7.*"
rand_xoshiro = "0.4.*"

[dev-dependencies]
async-std = "1.0.*"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

